// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ownership-certificate GET /change should render the change ownership certificate submitted page with "No" radio option checked if ownershipCertificateSubmitted is false 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change ownership certificate or land declaration submitted</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-radios" data-module="govuk-radios">
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="ownershipCertificateRadio" name="ownershipCertificateRadio"
                            type="radio" value="yes">
                            <label class="govuk-label govuk-radios__label" for="ownershipCertificateRadio">Yes</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="ownershipCertificateRadio-2" name="ownershipCertificateRadio"
                            type="radio" value="no" checked>
                            <label class="govuk-label govuk-radios__label" for="ownershipCertificateRadio-2">No</label>
                        </div>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`ownership-certificate GET /change should render the change ownership certificate submitted page with "Yes" radio option checked if ownershipCertificateSubmitted is true 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change ownership certificate or land declaration submitted</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-radios" data-module="govuk-radios">
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="ownershipCertificateRadio" name="ownershipCertificateRadio"
                            type="radio" value="yes" checked>
                            <label class="govuk-label govuk-radios__label" for="ownershipCertificateRadio">Yes</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="ownershipCertificateRadio-2" name="ownershipCertificateRadio"
                            type="radio" value="no">
                            <label class="govuk-label govuk-radios__label" for="ownershipCertificateRadio-2">No</label>
                        </div>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;
